# BioPy

./: .env-template  .gitignore  Pipfile  Procfile  config.yaml  db.sqlite3  deletethis.feather  install.bash  install.sh  manage.py  opcuatest.py  pyproject.toml  requirements.py  requirements.txt  reset.bash  reset.sh
BioPy/: private.py  settings.py  urls.py  wsgi.py
BioPyApp/: admin.py  apps.py  common.py  mixins.py  models.py  opcua.py  permissions.py  resources.py  serializers.py  views.py  widgets.py
BioPyApp/drivers/: client.py  dataframe.py  historian.py  opcua.py
BioPyApp/forms/: allauth.py  connection.py  dataframe.py  historian.py  structure.py
BioPyApp/migrations/: 0001_auto_20181102_1159.py  0001_initial.py  general_newsletter_creation.py  superuser_creation.py
BioPyApp/migrations_templates/: general_newsletter_creation.py  sites_update.py
BioPyApp/templates/: about.html  base.html  contacts.html  goodbye.html  home.html  homepage.html  popup.html  terms.html  verify.html
BioPyApp/templates/account/: login.html
BioPyApp/templates/actions/: actions.html
BioPyApp/templates/contact_form/: contact_form.html  contact_form_sent.html
BioPyApp/templates/crud/: form.html  message.html  wrapper.html
BioPyApp/templates/input/: input.html
BioPyApp/templates/newsletter/: newsletter_detail.html  newsletter_list.html  submission_archive.html  subscription_activate.html  subscription_subscribe.html  subscription_subscribe_activated.html  subscription_subscribe_email_sent.html  (+8 more)
BioPyApp/validators/: allauth.py  import_export.py
static/css/: global.css
(+30 files in other folders)
