[tool.poetry]
name = "BioPy"
version = "0.1.0"
description = "A real-time LIMS for Bioprocess data."
authors = ["AndreGuerra123 <guerraandre@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.1"
djangorestframework = "^3.9"
django-crispy-forms = "^1.7"
django-allauth = "^0.38.0"
django-contact-form = "^1.6"
opcua = "^0.98.6"
cryptography = "^2.5"
django-import-export = "^1.2"
django-formtools = "^2.1"
django-bootstrap-datepicker-plus = "^3.0"
django-addanother = "^2.0"
numpy = "^1.16"
pandas = "^0.24.1"
django-pandas = "^0.6.0"
django-downloadview = "^1.9"
feather-format = "^0.4.0"
django-computed-property = "^0.2.3"
tablib = "^0.12.1"
django-extensions = "^2.1"
django-heroku = "^0.3.1"
django-newsletter = {git = "https://github.com/DokterBob/django-newsletter"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
